change fontsize on smaller devices. fixed viewport for mobile devices. changed links to be relative. added a bigger link to the message screen to go to home screen. changed animation timing.

--- a/css/global.css
+++ b/css/global.css
@@ -45,19 +45,21 @@ h1, h2, h3{
 }
 
 @-webkit-keyframes blink {
-  	2% { 
+  	25% { 
   		height: 4px; 
   		margin-top: 8px;
   		margin-bottom: 8px;
   		border: 4px solid #2E8BB5;
   	}
-  	0%, 100% { 
+  	23%, 100% { 
   		height: 20px; 
+  		margin-top: 0px;
+  		margin-bottom: 0px;
   	}
 }
 
 .eye {
-    -webkit-animation: blink 6s step-start 0s infinite;
+    -webkit-animation: blink 5s step-start 0s infinite;
     width: 20px;
 	height: 20px;
 	background-color: #2E8BB5;
@@ -130,4 +132,14 @@ footer a{
 }
 footer a:visited{
 	color: black;
+}
+
+@media (max-width: 600px){
+	h2{
+		font-size: 14pt;
+	}
+}
+
+.nobreak{
+	word-wrap: normal;
 }
